# api-connectors

./: .gitignore  README.md  leonmende  swagger.json
encryption_example/: Encryption.cpp  Encryption.cs  Encryption.go  Encryption.java  Encryption.js  Encryption.php  Encryption.py  Encryption.rb  Encryption_URLEncode.py  Encryption_spot.py  Encryption_spot_testnet.py
encryption_example/usdc/: WebSocketClient.java  WebSocketClientHandler.java
mini-tradingbot/: bot.py
mini-tradingbot/constant/: __init__.py  constant.py
mini-tradingbot/datatypes/: __init__.py  object.py
mini-tradingbot/gateway/: __init__.py  bybit_gateway.py
mini-tradingbot/manager/: manager.py
mini-tradingbot/rest/: __init__.py
mini-tradingbot/websocket/: WebsocketClient.py
official-http/: .gitignore
official-http/cpp/: CMakeLists.txt  README.md  main.cpp
official-http/cpp/BybitGateway/: Bybit.cpp  Bybit.h  CMakeLists.txt
official-http/python/: BybitAuthenticator.py  Endpoints.md  README.md  bybit.py  setup.py  test.py
official-ws/Java/: README.md
official-ws/go/: BybitWebsocket.go
official-ws/python/: BybitWebsocket.py  README.md  main.py  setup.py
swagger-gen/android/: README.md
swagger-gen/clojure/: project.clj
swagger-gen/cpp/: ApiClient.cpp  ApiClient.h  ApiConfiguration.cpp  ApiConfiguration.h  ApiException.cpp  ApiException.h  CMakeLists.txt  HttpContent.cpp  HttpContent.h  IHttpBody.h  JsonBody.cpp  JsonBody.h  ModelBase.cpp  ModelBase.h  MultipartFormData.cpp  MultipartFormData.h  Object.cpp  Object.h
swagger-gen/cpprest/: ApiClient.cpp  ApiClient.h  JsonBody.h  (+15 more)
(+4343 files in other folders)
